2009-09-07  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora_modules.js: add events for selects in
	local modules form:
	* godmode/agentes/module_manager_editor.php: add ajax request for local
	modules form.

2009-09-04  Sancho Lerena <slerena@artica.es>

	* pandoradb.sql: Commented server type codes.

	* godmode/servers/manage_export_form.php: Fixed problem assigning 
	export server because wasn't using the new server_type field.

2009-09-04  Raul Mateos  <raulofpandora@gmail.com>

	* include/config_process.php: Update build after last changes.

	* godmode/modules/manage_nc_groups*.php,
	godmode/modules/manage_network_components_form*.php: Unify titles
	improving integrity of appearance.

2009-09-04  Miguel de Dios  <miguel.dedios@artica.es>

	* images/status_sets/default/module_warning_ball.png,
	images/status_sets/default/module_ok_ball.png,
	images/status_sets/default/module_critical_ball.png: change the size of
	image.

2009-09-03  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_menu.php: fix bug that introduce obligatory autorefresh
	and maybe some extension run bad with autorefresh.
	
	*include/functions_reporting.php: add function
	"get_agent_module_info_with_filter", this function is similar more or less
	at "get_agent_module_info" but the function can set SQL filter for
	tune the result.
	*include/functions_ui.php: add more features at function "print_group_icon"
	can set style and only icon not link.
	*images/so_aix_small.png, images/network_small.png, images/so_bsd_small.png,
	images/so_solaris_small.png, images/so_other_small.png, 
	images/so_cisco_small.png, 
	images/status_sets/default/agent_critical_ball.png,
	images/status_sets/default/module_warning_ball.png,
	images/status_sets/default/module_ok_ball.png,
	images/status_sets/default/alert_fired_ball.png,
	images/status_sets/default/agent_warning_ball.png,
	images/status_sets/default/agent_no_data_ball.png,